# billiards-attempts-api

./: CMakeLists.txt
src/: AttemptsManager.h  attempts_api.cpp
